--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,29 +4,29 @@ on:
   push:
     branches:
       - main
-    
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: Run tests
+      - name: Lint with flake8
+        run: |
+          pip install flake8
+          flake8 src/ tests/ --max-line-length=100
+
+      - name: Run tests with pytest
         run: pytest
-
-      - name: Build package
-        run: python setup.py sdist bdist_wheel
-
-      - name: Upload package
-        uses: actions/upload-artifact@v4
-        with:
-          name: package
-          path: dist/*
-          
