Update build file to use black and isort instead of flake8

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,10 +23,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Lint with flake8
+      - name: Lint and isort with black and isort
         run: |
-          pip install flake8
-          flake8 src/ tests/ --max-line-length=100
+          pip install black isort
+          black .
+          isort .
 
       - name: Run tests with pytest
         run: pytest
