--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,11 +37,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      
+
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::611771051034:role/GitHubOIDCDeployRole
+          role-to-assume: arn:aws:iam::611771051034:role/github-actions-deployment-role
           aws-region: ${{ github.event.inputs.region }}
 
       - name: Run custom EC2 deploy action
@@ -53,4 +53,4 @@ jobs:
           key-name:      ${{ github.event.inputs['key-name'] }}
           tag-value:     ${{ github.event.inputs['tag-value'] }}
           script-path:   ${{ github.event.inputs['script-path'] }}
-          ssh-key:       ${{ secrets.EC2_SSH_KEY }}   # <-- pass secret here
+          ssh-key:       ${{ secrets.EC2_SSH_KEY }}
